Return permissions for account scope
